<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="es.rafapuig.bmi.BmiViewModel" />
        <import type="java.util.Locale"/>
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_mass_index"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/height"
                            android:textAllCaps="true"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/in_centimeters"
                            android:textStyle="italic" />

                        <EditText
                            android:id="@+id/estaturaEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="40sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/weight_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/weight"
                            android:textAllCaps="true"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/in_kilograms"
                            android:textStyle="italic" />

                        <EditText
                            android:id="@+id/pesoEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:labelFor="@+id/weight_label"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="40sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="16dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/bmi"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/resultado_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:saveEnabled="true"
                        android:textAlignment="center"
                        android:textSize="80sp"
                        android:text='@{mainViewModel.bmi != null ? String.format(Locale.getDefault(), "%.2f", mainViewModel.bmi) : ""}'
                        tools:text="18" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/resultado_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:saveEnabled="true"
                        android:textAlignment="center"
                        android:textSize="40sp"
                        tools:text="Sobrepeso" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/compute_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/compute_bmi"
            android:textSize="24sp" />

    </LinearLayout>

</layout>